--- a/code/helloWorld.html
+++ b/code/helloWorld.html
@@ -2,7 +2,7 @@
 <header><title>HacktoberFest</title></header>
 <body>
 Hello, world! </br>
-Hello, HacktoberFest!</br></br>
+  <p>Hello, HacktoberFest!</p></br></br>
 <a href="aboutMe.html">About me</a>
 </body>
 </html>
